# wgx-platform

./: Cargo.toml
.cargo/: config.toml
examples/: iced.rs  triangle.rs
examples/bowl/: main.rs  v3d_inst_text_diff.wgsl
examples/egui/: main.rs  ui.rs
examples/iced/: main.rs  ui.rs
run-wasm/: Cargo.toml
run-wasm/src/: main.rs
src/: application.rs  conditional_execution.rs  egui_ctx.rs  entry_point.rs  error.rs  frame_ctx.rs  gx_application.rs  gx_ctx.rs  iced_clipboard.rs  icon_loader.rs  lib.rs  log_helper.rs  refs.rs  rng.rs  timer.rs  wgx_ctx.rs
src/app/: ctx.rs  mod.rs  mount.rs  state.rs  web_clipboard.rs
src/iced/: clipboard.rs  gui.rs  iced.rs  mod.rs  wgx_extension.rs
src/platform/: conditional_execution.rs  future.rs  init.rs  mod.rs
src/wake_lock/: mod.rs  native.rs  web.rs
