[package]
name = "platform"
version = "1.0.0"
authors = ["Stefan Tammer <st.tammer@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "platform"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(web_sys_unstable_apis)'] }


[features]
frame_timer = []
auto_wake_lock = ["wake_lock"]
wake_lock = ["dep:nosleep", "web-sys/Navigator", "web-sys/WakeLock", "web-sys/WakeLockType", "web-sys/WakeLockSentinel"]
rng = ["dep:getrandom", "dep:fastrand"]
icon_loader = ["dep:icon-loader", "dep:resvg"]
web_clipboard = ["web-sys/Clipboard", "web-sys/ClipboardEvent", "web-sys/DataTransfer"]


[dependencies]
winit = "0.30"
log = "0"
anyhow = "1"
web-time = "1"
take_mut = "0.2"

getrandom = { version = "0.2", features = ["js"], optional = true }
fastrand = { version = "2", default-features = false, optional = true }


[target.'cfg(target_os = "linux")'.dependencies]
icon-loader = { version = "0.4", optional = true }
resvg = { version = "^0.43", optional = true }


[target.'cfg(not(target_family = "wasm"))'.dependencies]
pollster = "0.3"
simple_logger = "5"

nosleep = { version = "0.2", optional = true }


[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3" }
js-sys = { version = "0.3" }
console_error_panic_hook = "0.1"
console_log = "1"